Fix inline code styling in dark mode

--- a/templates/page.css
+++ b/templates/page.css
@@ -764,6 +764,11 @@ nav a
     /* TODO */
 }
 
+.dark code
+{
+  background-color: #eee2;
+}
+
 .dark pre
 {
   border: 1px solid #97a8ba;
